<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:id="@+id/container"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:gravity="center_horizontal"
	tools:context="com.bkmobiledevelopment.chargingwear.MainActivity"
	tools:deviceIds="wear">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/while_charging"/>

	<ToggleButton
		android:id="@+id/black_screen_toggle_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textOff="@string/black_screen_toggle_off"
		android:textOn="@string/black_screen_toggle_on"/>

	<ToggleButton
		android:id="@+id/bluetooth_toggle_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textOff="@string/bluetooth_toggle_off"
		android:textOn="@string/bluetooth_toggle_on"/>

</LinearLayout>
